<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.MainActivity">

    <Button
        android:id="@+id/sample_demo"
        android:layout_width="wrap_content"
        android:text="@string/sample_demo"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/text_lifecycle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btn_login"
        android:text="@string/string_login_enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <CheckBox
        android:text="@string/string_checkbox"
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btn_inverse"
        android:text="@string/string_inverse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btn_delay_task"
        android:text="@string/string_delayedtask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btn_callback"
        android:text="@string/network_callback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
